force-app/main/default/objects/fdsdeploy__FDSAccountEntityIdApproval__c/fdsdeploy__FDSAccountEntityIdApproval__c.object-meta.xml
<CustomObject>
    <label>Account Code Approval</label>
    <nameField>
        <displayFormat>FDS-{0000000000}</displayFormat>
        <label>Account Code Approvals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Code Approval</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>