force-app/main/default/objects/fdsdeploy__FDSAccountEntityIdApproval__c/fields/fdsdeploy__FDS_Original_Name__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__FDS_Original_Name__c</fullName>
    <label>Original Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>