force-app/main/default/objects/fdsdeploy__FDSAccountEntityIdApproval__c/fields/fdsdeploy__FDS_Original_Ticker__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__FDS_Original_Ticker__c</fullName>
    <label>FactSet Original Ticker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>