force-app/main/default/objects/fdsdeploy__FDSAccountEntityIdApproval__c/fields/fdsdeploy__FDSAccount__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__FDSAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>FactsetAccountEntityIdApproval</relationshipName>
    <type>Lookup</type>
</CustomField>