force-app/main/default/objects/fdsdeploy__FDSAccountEntityIdApproval__c/fields/fdsdeploy__FDSCompanyLocation__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__FDSCompanyLocation__c</fullName>
    <label>FDS Company Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>