force-app/main/default/objects/fdsdeploy__FDSAccountEntityIdApproval__c/fields/fdsdeploy__FDSCompanyName__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__FDSCompanyName__c</fullName>
    <label>FDS Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>