force-app/main/default/objects/fdsdeploy__FDSAccountEntityIdApproval__c/fields/fdsdeploy__FDSEntityId__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__FDSEntityId__c</fullName>
    <inlineHelpText>Factset Account Code</inlineHelpText>
    <label>FDS Entity Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>