force-app/main/default/objects/fdsdeploy__FDSAccountEntityIdApproval__c/fields/fdsdeploy__FDSIsDelink__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__FDSIsDelink__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FDSIsDelink</label>
    <type>Checkbox</type>
</CustomField>