force-app/main/default/objects/fdsdeploy__FDSAccountEntityIdApproval__c/fields/fdsdeploy__FDSOriginalName__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__FDSOriginalName__c</fullName>
    <label>Factset Original Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>