force-app/main/default/objects/fdsdeploy__FDSAccountEntityIdApproval__c/fields/fdsdeploy__FDSOriginalTickerRegion__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__FDSOriginalTickerRegion__c</fullName>
    <label>FDS Original Ticker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>