force-app/main/default/objects/fdsdeploy__FDSAccountEntityIdApproval__c/fields/fdsdeploy__FDSTicker__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__FDSTicker__c</fullName>
    <label>FactSet Ticker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>