force-app/main/default/objects/fdsdeploy__FDSAccountEntityIdApproval__c/fields/fdsdeploy__FDSWebsite__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__FDSWebsite__c</fullName>
    <label>FDS Website</label>
    <type>Url</type>
</CustomField>